Enable OpenMP and GLib GThread in devel build (#264)
* Enable OpenMP and GLib GThread in dev build

Cherry-picked from d0b85283bd223402d3df75ecc844cb518199f0a7/#263

* Bump build number to 3

* MNT: Re-rendered with conda-build 3.26.0, conda-smithy 3.24.1, and conda-forge-pinning 2023.08.08.11.45.19

---------

Co-authored-by: conda-forge-webservices[bot] <91080706+conda-forge-webservices[bot]@users.noreply.github.com>

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -5,7 +5,7 @@ source:
   git_url: https://github.com/GenericMappingTools/gmt.git
   git_rev: 95c3431b1915e18ec7430a20cecb03e885637193
 build:
-  number: 2
+  number: 3
   skip: true  # [win and vc<14]
 requirements:
   build:
@@ -19,6 +19,7 @@ requirements:
     - fftw
     - gdal
     - geos
+    - glib
     - ghostscript
     - libnetcdf
     - hdf5
@@ -44,12 +45,18 @@ requirements:
     - dcw-gmt  # [not win]
 test:
   commands:
+    # Test plotting basemap with coastlines
     - gmt defaults -Vd
     - gmt psbasemap -R10/70/-3/8 -JX4i/3i -Ba -B+glightred+t"TEST" -P -Vd > test0.ps
     - gmt pscoast -R0/10/0/10 -JM6i -Ba -Ggray -ENG+p1p,blue -P -Vd > test1.ps
     - gmt begin -Vd
     - gmt coast -R0/10/0/10 -JM6i -Ba -Ggray -ENG+p1p,blue -Vd
     - gmt end
+    # Test OpenMP multi-core with -x2
+    - gmt-config --all  # [not win]
+    - gmt  # [win]
+    - gmt grdmath -Rg -I1 0 90 SDIST = dist_to_NP.nc -x2
+
 about:
   home: https://www.generic-mapping-tools.org
   license: LGPL-3.0-or-later
