Add urls to GMT's documentation and development page
Some optional extra metadata, see https://github.com/conda-forge/staged-recipes/blob/af4f113252fc50547f42b19cc0d7b7779c46d15e/recipes/example/meta.yaml#L87-L88

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -65,6 +65,8 @@ test:
 
 about:
   home: https://www.generic-mapping-tools.org
+  doc_url: https://docs.generic-mapping-tools.org
+  dev_url: https://github.com/GenericMappingTools/gmt
   license: LGPL-3.0-or-later
   license_file: LICENSE.TXT
   summary: The Generic Mapping Tools.
