Switch from tibdex/github-app-token to actions/create-github-app-token
Repo at https://github.com/actions/create-github-app-token

--- a/.github/workflows/bumpdevversion.yml
+++ b/.github/workflows/bumpdevversion.yml
@@ -14,11 +14,11 @@ jobs:
 
     steps:
       # Generate token from GenericMappingTools bot
-      - uses: tibdex/github-app-token@v1.8.0
+      - uses: actions/create-github-app-token@v1.10.0
         id: generate-token
         with:
-          app_id: ${{ secrets.APP_ID }}
-          private_key: ${{ secrets.APP_PRIVATE_KEY }}
+          app-id: ${{ secrets.APP_ID }}
+          private-key: ${{ secrets.APP_PRIVATE_KEY }}
 
       # Checkout current git repository
       - name: Checkout
