--- a/.ci_support/win_64_.yaml
+++ b/.ci_support/win_64_.yaml
@@ -1,5 +1,7 @@
 c_compiler:
 - vs2019
+c_stdlib:
+- vs
 channel_sources:
 - conda-forge
 channel_targets:
@@ -28,7 +30,5 @@ pcre:
 - '8'
 target_platform:
 - win-64
-vc:
-- '14'
 zlib:
 - '1.2'
