--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,7 +9,7 @@ source:
   sha256: b17e165fd6c85aeb0a281700bd89522af8c2676a2d7bdb51a6b242fa9f1779c9
 
 build:
-  number: 4
+  number: 5
   skip: true  # [ppc64le]
 
 requirements:
@@ -43,6 +43,7 @@ requirements:
     - geos
     - ghostscript
     - libgdal-jp2openjpeg
+    - libgdal-hdf5
     - libnetcdf
     - hdf5
     - {{ pin_compatible('zlib', max_pin='x.x') }}
@@ -64,9 +65,6 @@ test:
     - gmt-config --all  # [not win]
     - gmt  # [win]
     - gmt grdmath -Rg -I1 0 90 SDIST = dist_to_NP.nc -x2
-    # Test reading/writing a netCDF/HDF5 file
-    - gmt grdcut @earth_relief_01d -R-10/-9/3/5 -Greliefcut.nc
-    - "[ -e 'reliefcut.nc' ] && exit 0 || exit 1"
     # Test reading/writing a JP2 file (S90E000.earth_relief_05m_p.jp2)
     - gmt grdcut @earth_relief_05m -R-10/-9/3/5 -Greliefcut.jp2=gd:JP2OpenJPEG
     - "[ -e 'reliefcut.jp2' ] && exit 0 || exit 1"
