--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,7 +9,7 @@ source:
   sha256: b17e165fd6c85aeb0a281700bd89522af8c2676a2d7bdb51a6b242fa9f1779c9
 
 build:
-  number: 4
+  number: 5
   skip: true  # [ppc64le]
 
 requirements:
@@ -42,6 +42,7 @@ requirements:
     - {{ pin_compatible('gdal', max_pin='x.x') }}
     - geos
     - ghostscript
+    - libgdal-hdf5
     - libgdal-jp2openjpeg
     - libnetcdf
     - hdf5
