--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,8 +8,9 @@ source:
   url: https://github.com/GenericMappingTools/gmt/releases/download/{{ version }}/gmt-{{ version }}-src.tar.gz
   sha256: b17e165fd6c85aeb0a281700bd89522af8c2676a2d7bdb51a6b242fa9f1779c9
   patches:
-    - lapack.patch  # Patch for GMT 6.5.0
-    - msvc-nan.patch # Patch for GMT 6.5.0
+    # Patches for GMT 6.5.0
+    - lapack.patch
+    - gmtlogo.patch
 
 build:
   number: 7
