Use libgdal-core instead of gdal in host
Avoid pulling in python related dependencies when installing `gdal` instead of `libgdal`.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,8 +16,8 @@ requirements:
     - libblas
     - libcblas
     - liblapack
+    - libgdal-core
     - fftw
-    - gdal
     - geos
     - glib
     - ghostscript
