--- a/.ci_support/osx_arm64_.yaml
+++ b/.ci_support/osx_arm64_.yaml
@@ -18,8 +18,6 @@ curl:
 - '8'
 fftw:
 - '3'
-gdal:
-- '3.10'
 geos:
 - 3.13.0
 glib:
@@ -27,11 +25,13 @@ glib:
 hdf5:
 - 1.14.3
 libblas:
-- 3.9 *netlib
+- 3.9.* *netlib
 libcblas:
-- 3.9 *netlib
+- 3.9.* *netlib
+libgdal_core:
+- '3.10'
 liblapack:
-- 3.9 *netlib
+- 3.9.* *netlib
 libnetcdf:
 - 4.9.2
 macos_machine:
