--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -32,7 +32,7 @@ requirements:
     - {{ pin_compatible('fftw', max_pin='x') }}
     - geos
     - ghostscript
-    - {? {pin_compatible('libgdal-core': '', max_pin='x.x'): ''} : ''}
+    - {{ pin_compatible('libgdal-core', max_pin='x.x') }}
     - libgdal-jp2openjpeg
     - libnetcdf
     - hdf5
