Change gdal -> libgdal-core for pin_compatible sed --in-place comand
Xref https://github.com/conda-forge/gmt-feedstock/pull/311#discussion_r2015223825

--- a/.github/workflows/bumpdevversion.yml
+++ b/.github/workflows/bumpdevversion.yml
@@ -89,7 +89,7 @@ jobs:
 
           # Fix incorrectly formatted {{ pin_compatible('...') }}
           sed --in-place "s/{? {pin_compatible('fftw': '', max_pin='x'): ''} : ''}/{{ pin_compatible('fftw', max_pin='x') }}/g" recipe/meta.yaml
-          sed --in-place "s/{? {pin_compatible('gdal': '', max_pin='x.x'): ''} : ''}/{{ pin_compatible('gdal', max_pin='x.x') }}/g" recipe/meta.yaml
+          sed --in-place "s/{? {pin_compatible('libgdal-core': '', max_pin='x.x'): ''} : ''}/{{ pin_compatible('libgdal-core', max_pin='x.x') }}/g" recipe/meta.yaml
           sed --in-place "s/{? {pin_compatible('zlib': '', max_pin='x.x'): ''} : ''}/{{ pin_compatible('zlib', max_pin='x.x') }}/g" recipe/meta.yaml
           sed --in-place "s/{? {pin_compatible('curl': '', max_pin='x'): ''} : ''}/{{ pin_compatible('curl', max_pin='x') }}/g" recipe/meta.yaml
 
