--- a/.github/workflows/bumpdevversion.yml
+++ b/.github/workflows/bumpdevversion.yml
@@ -1,10 +1,10 @@
 on:
-  push: []
+  push:
     # branches:
     #   - devel
   # Schedule runs on 9am every Tuesday
   schedule:
-    - cron: '0 9 * * 2'
+    - cron: "0 9 * * 2"
 
 jobs:
   bump-dev-version:
